--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,11 @@
             {%- if site.data.education.size > 0 -%}
                 {%- include education.html -%}
             {%- endif -%}
+            
+            {%- if site.data.certificate.size > 0 -%}
+                {%- include certificate.html -%}
+            {%- endif -%}
+            
 
             {%- include more.html -%}
             
