--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,17 +11,21 @@
         <div class="wrapper">
 
             {%- include about.html -%}
+            
+            {%- if site.data.experience.size > 0 -%}
+                {%- include experience.html -%}
+            {%- endif -%}
 
             {%- if site.data.projects.size > 0 -%}
                 {%- include projects.html -%}
             {%- endif -%}
 
-            {%- if site.data.experience.size > 0 -%}
-                {%- include experience.html -%}
-            {%- endif -%}
-
             {%- if site.data.education.size > 0 -%}
                 {%- include education.html -%}
+            {%- endif -%}
+            
+            {%- if site.data.Leardership Experience.size > 0 -%}
+                {%- include Leadership Experience.html -%}
             {%- endif -%}
             
             {%- if site.data.certificate.size > 0 -%}
